--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # 屏蔽临时编译生成的exe文件
 Game-Sample.exe
 
+# 屏蔽用于作为草稿的源文件
+Sample.cpp
+
 # 屏蔽每个人的.vscode配置文件夹
 .vscode/
+
+
+# 临时排除项目
+visual/RW_*
+visual/TP_*
