跨平台性能的优化

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,23 +17,57 @@ include_directories("${CMAKE_SOURCE_DIR}/include")
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 
-# SDL2 库链接
-set(SDL2_LIBRARIES mingw32 SDL2main SDL2 SDL2_mixer)
-target_link_libraries(Eclipsea PRIVATE ${SDL2_LIBRARIES})
+if(WIN32)
+    # SDL2 库链接
+    set(SDL2_LIBRARIES mingw32 SDL2main SDL2 SDL2_mixer)
+    target_link_libraries(Eclipsea PRIVATE ${SDL2_LIBRARIES})
 
 
-# 加上图标（即resources连接）
-set(RESOURCE_OBJECT "${CMAKE_SOURCE_DIR}/resources/resource.o")
-target_link_libraries(${PROJECT_NAME} PRIVATE ${RESOURCE_OBJECT})
+    # 加上图标（即resources连接）
+    set(RESOURCE_OBJECT "${CMAKE_SOURCE_DIR}/resources/resource.o")
+    target_link_libraries(${PROJECT_NAME} PRIVATE ${RESOURCE_OBJECT})
 
 
-# 拷贝 assets 文件夹
-set(ENVIRONMENT_SOURCE_DIR "${CMAKE_SOURCE_DIR}/assets")
-set(ENVIRONMENT_DEST_DIR "${CMAKE_SOURCE_DIR}/build")
+    # 拷贝 assets 文件夹
+    set(ENVIRONMENT_SOURCE_DIR "${CMAKE_SOURCE_DIR}/assets")
+    set(ENVIRONMENT_DEST_DIR "${CMAKE_SOURCE_DIR}/build")
 
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E echo "Copying game assets to build directory..."
-    COMMAND ${CMAKE_COMMAND} -E make_directory "${ENVIRONMENT_DEST_DIR}"
-    COMMAND ${CMAKE_COMMAND} -E copy_directory "${ENVIRONMENT_SOURCE_DIR}" "${ENVIRONMENT_DEST_DIR}"
-    COMMENT "Post-build: Copying environment directory contents to ../build"
-)
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E echo "Copying game assets to build directory..."
+        COMMAND ${CMAKE_COMMAND} -E make_directory "${ENVIRONMENT_DEST_DIR}"
+        COMMAND ${CMAKE_COMMAND} -E copy_directory "${ENVIRONMENT_SOURCE_DIR}" "${ENVIRONMENT_DEST_DIR}"
+        COMMENT "Post-build: Copying environment directory contents to ../build"
+    )
+endif()
+
+if(PSP)
+    # 查找 SDL2 和 SDL2_mixer
+    find_package(PkgConfig REQUIRED)
+
+    pkg_search_module(SDL2 REQUIRED sdl2)
+    pkg_search_module(SDL2_MIXER REQUIRED SDL2_mixer)
+
+
+    # 添加头文件路径
+    target_include_directories(${PROJECT_NAME} PRIVATE
+        include
+        ${SDL2_INCLUDE_DIRS}
+        ${SDL2_MIXER_INCLUDE_DIRS}
+        ${SDL2_IMAGE_INCLUDE_DIRS}
+    )
+
+    # 链接库
+    target_link_libraries(${PROJECT_NAME} PRIVATE
+        ${SDL2_LIBRARIES}
+        ${SDL2_MIXER_LIBRARIES}
+    )
+
+    create_pbp_file(
+        TARGET ${PROJECT_NAME}
+        ICON_PATH ${CMAKE_SOURCE_DIR}/resources/icon0.png
+        BACKGROUND_PATH ${CMAKE_SOURCE_DIR}/resources/pic0.png
+        PREVIEW_PATH NULL
+        TITLE "Eclipsea"
+        VERSION 01.00
+    )
+endif()
